2015-09-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (help): Add ST_DONGLE and ST_NUCLEO_F103.

2015-09-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Use upper bytes of unique
	ID of MCU; same as USB serial number.

	* src/configure (help): Add NITROKEY_START.a

2015-08-26  Mateusz Zalega  <mateusz@nitrokey.com>

	* GNUK_USB_DEVICE_ID: Add Nitrokey Start.

2015-08-05  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.1.7.

2015-08-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c: Update from NeuG 1.0.3.

	* chopstx: Update to 0.08.
	* src/sys.h: Update.

2015-08-03  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/steps.py (set_msg): Python3 fix.
	* test/generate_keys.py: Likewise.
	* test/rsa_keys.py: Likewise.

	* tool/gnuk_token.py (gnuk_token.download, gnuk_token.execute)
	(regnual.download): Python3 fix.
	(list_to_string): Remove.

	* tool/upgrade_by_passwd.py (maian): Python3 fix.
	* tool/usb_strings.py (main): Python3 fix.

2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* src/configure (output_vendor_product_serial_strings): Fix sed
	script when string is short.  Remove empty line.

	* regnual/regnual.c (usb_cb_ctrl_write_finish, usb_cb_setup)
	(usb_cb_get_descriptor, usb_cb_interface): Follow the change
	of USB API.

	* tool/stlinkv2.py: Support ST-Link/V2-1.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* tool/stlinkv2.py: Fix for Python3.  Thanks to Bertrand Jacquin.

	* tool/gpg_agent.py: Fix for Python3.

	* src/usb-msc.c: Update from Fraucheky.

	* src/usb_stm32f103.c (struct DATA_INFO): Remove offset.
	(struct DEVICE_INFO): Integrate CONTROL_INFO.

2015-07-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_stm32f103.c (usb_lld_reply_request): New.
	(usb_lld_set_data_to_send): Remove.
	(usb_lld_set_data_to_recv): Not a macro but a function.
	(std_get_status): Don't use statically allocated memory.
	(std_get_configuration): Use usb_lld_reply_request.
	(handle_setup0): Follow the change.