@@ -1,5 +1,10 @@
 2015-09-08  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/gnuk.h (EV_RESET, LED_RESET): New.
+
+	* src/usb_ctrl.c (CDC_CTRL_DTR): New.
+	(vcom_port_data_setup): Distinguish detail->value for DTR.
+
 	* src/configure (help): Add ST_DONGLE and ST_NUCLEO_F103.
 
 2015-09-04  Niibe Yutaka  <gniibe@fsij.org>
